# List
ADD_EXECUTABLE(Deque_test Deque_test.cpp)
ADD_EXECUTABLE(ForwardList_test ForwardList_test.cpp)
ADD_EXECUTABLE(CircleList_test CircleList_test.cpp)
ADD_EXECUTABLE(List_test List_test.cpp)

# Queue
ADD_EXECUTABLE(Queue_test Queue_test.cpp)
ADD_EXECUTABLE(CircleQueue_test CircleQueue_test.cpp)

# Search
ADD_EXECUTABLE(BinarySearch_test BinarySearch_test.cpp)

# Sort
ADD_EXECUTABLE(MergeSort_test MergeSort_test.cpp)

# Stack
ADD_EXECUTABLE(Stack_test Stack_test.cpp)

# TestHelper
ADD_EXECUTABLE(TestHelper_test TestHelper_test.cpp)